Saved Jupyter notebook '1 - Prepare the heart_measures dataset for ML modeling'

--- a/ipython_notebooks/1 - Prepare the heart_measures dataset for ML modeling.ipynb
+++ b/ipython_notebooks/1 - Prepare the heart_measures dataset for ML modeling.ipynb
@@ -1,9 +1,5 @@
 {
   "metadata": {
-    "analyzedDataset": "heart_measures",
-    "createdOn": 1680705628235,
-    "creator": "clemence.bic@dataiku.com",
-    "customFields": {},
     "hide_input": false,
     "kernelspec": {
       "name": "python3",
@@ -12,7 +8,7 @@
     },
     "language_info": {
       "name": "python",
-      "version": "3.7.12",
+      "version": "3.6.8",
       "mimetype": "text/x-python",
       "codemirror_mode": {
         "name": "ipython",
@@ -22,9 +18,13 @@
       "nbconvert_exporter": "python",
       "file_extension": ".py"
     },
-    "modifiedBy": "admin",
+    "createdOn": 1680705628235,
+    "analyzedDataset": "heart_measures",
+    "customFields": {},
+    "creator": "clemence.bic@dataiku.com",
+    "versionNumber": 3,
     "tags": [],
-    "versionNumber": 3
+    "modifiedBy": "pollybernardes@gmail.com"
   },
   "nbformat": 4,
   "nbformat_minor": 1,
