Saved Jupyter notebook '1 - Prepare the heart_measures dataset for ML modeling'

--- a/ipython_notebooks/1 - Prepare the heart_measures dataset for ML modeling.ipynb
+++ b/ipython_notebooks/1 - Prepare the heart_measures dataset for ML modeling.ipynb
@@ -33,7 +33,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Step 1: Preparing the input dataset for ML modeling"
+        "# Step 1: Preparing the input dataset for ML modeling\n"
       ]
     },
     {
