Saved Jupyter notebook '1 - Preparing the heart_measures dataset for ML modeling'

--- a/ipython_notebooks/1 - Preparing the heart_measures dataset for ML modeling.ipynb
+++ b/ipython_notebooks/1 - Preparing the heart_measures dataset for ML modeling.ipynb
@@ -87,9 +87,11 @@
     {
       "execution_count": 0,
       "cell_type": "code",
-      "metadata": {},
+      "metadata": {
+        "scrolled": true
+      },
       "source": [
-        "pip install seaborn"
+        "pip install --upgrade seaborn"
       ],
       "outputs": []
     },
