Saved Jupyter notebook '1 - Preparing the heart_measures dataset for ML modeling'

--- a/ipython_notebooks/1 - Preparing the heart_measures dataset for ML modeling.ipynb
+++ b/ipython_notebooks/1 - Preparing the heart_measures dataset for ML modeling.ipynb
@@ -78,9 +78,20 @@
     {
       "execution_count": 0,
       "cell_type": "code",
-      "metadata": {},
+      "metadata": {
+        "scrolled": true
+      },
       "source": [
         "import dataiku\nfrom dataiku import pandasutils as pdu\nimport pandas as pd\nimport matplotlib.pyplot as plt\nimport seaborn as sns\nimport math\nfrom heart_attack_library import data_processing\nfrom sklearn.preprocessing import RobustScaler\nfrom sklearn.model_selection import train_test_split"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "import seaborn as sns"
       ],
       "outputs": []
     },
