--- a/ipython_notebooks/1 - Preparing the heart_measures dataset for ML modeling.ipynb
+++ b/ipython_notebooks/1 - Preparing the heart_measures dataset for ML modeling.ipynb
@@ -2,13 +2,13 @@
   "metadata": {
     "hide_input": false,
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3",
+      "name": "py-dku-venv-heart-attack-project",
+      "display_name": "Python (env heart-attack-project)",
       "language": "python"
     },
     "language_info": {
       "name": "python",
-      "version": "3.6.8",
+      "version": "3.9.18",
       "mimetype": "text/x-python",
       "codemirror_mode": {
         "name": "ipython",
