--- a/ipython_notebooks/1 - Preparing the heart_measures dataset for ML modeling.ipynb
+++ b/ipython_notebooks/1 - Preparing the heart_measures dataset for ML modeling.ipynb
@@ -23,8 +23,11 @@
     "customFields": {},
     "creator": "clemence.bic@dataiku.com",
     "versionNumber": 4,
-    "tags": [],
-    "modifiedBy": "pollybernardes@gmail.com"
+    "tags": [
+      "recipe-editor"
+    ],
+    "modifiedBy": "pollybernardes@gmail.com",
+    "associatedRecipe": "recipe_from_notebook_1__Preparing_the_heart_measures_dataset_for_ML_modeling"
   },
   "nbformat": 4,
   "nbformat_minor": 1,
