--- a/ipython_notebooks/1 - Preparing the heart_measures dataset for ML modeling.ipynb
+++ b/ipython_notebooks/1 - Preparing the heart_measures dataset for ML modeling.ipynb
@@ -24,10 +24,9 @@
     "creator": "clemence.bic@dataiku.com",
     "versionNumber": 4,
     "tags": [
-      "recipe-editor"
+      "deleted-recipe-editor"
     ],
-    "modifiedBy": "pollybernardes@gmail.com",
-    "associatedRecipe": "recipe_from_notebook_1__Preparing_the_heart_measures_dataset_for_ML_modeling"
+    "modifiedBy": "pollybernardes@gmail.com"
   },
   "nbformat": 4,
   "nbformat_minor": 1,
