Linked notebook '1 - Preparing the heart_measures dataset for ML modeling' to recipe 'recipe_from_notebook_1__Preparing_the_heart_measures_dataset_for_ML_modeling'

--- a/ipython_notebooks/1 - Preparing the heart_measures dataset for ML modeling.ipynb
+++ b/ipython_notebooks/1 - Preparing the heart_measures dataset for ML modeling.ipynb
@@ -24,9 +24,10 @@
     "creator": "clemence.bic@dataiku.com",
     "versionNumber": 4,
     "tags": [
-      "deleted-recipe-editor"
+      "recipe-editor"
     ],
-    "modifiedBy": "pollybernardes@gmail.com"
+    "modifiedBy": "pollybernardes@gmail.com",
+    "associatedRecipe": "recipe_from_notebook_1__Preparing_the_heart_measures_dataset_for_ML_modeling"
   },
   "nbformat": 4,
   "nbformat_minor": 1,
