Saved Jupyter notebook '2 - Experimenting different ML approaches'

--- a/ipython_notebooks/2 - Experimenting different ML approaches.ipynb
+++ b/ipython_notebooks/2 - Experimenting different ML approaches.ipynb
@@ -2,13 +2,13 @@
   "metadata": {
     "hide_input": false,
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3",
+      "name": "py-dku-venv-heart-attack-project",
+      "display_name": "Python (env heart-attack-project)",
       "language": "python"
     },
     "language_info": {
       "name": "python",
-      "version": "3.6.8",
+      "version": "3.9.18",
       "mimetype": "text/x-python",
       "codemirror_mode": {
         "name": "ipython",
@@ -61,7 +61,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "**Make sure you\u0027re using the `heart-attack-project` code environment** (see prerequisites)"
+        "**using the `heart-attack-project` code environment** "
       ]
     },
     {
