--- a/ipython_notebooks/2 - Experimenting different ML approaches.ipynb
+++ b/ipython_notebooks/2 - Experimenting different ML approaches.ipynb
@@ -118,7 +118,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "As we would like to keep track of all the experiment-related information (performance metrics, parameters and models) for our different ML experiments, we must use a Dataiku managed folder to store all this information. This section is about creating (or accessing if it already exists) the required managed folder."
+        "To keep track of all the experiment-related information (performance metrics, parameters and models) for our different ML experiments, we must use a Dataiku managed folder to store all this information. This section is about creating (or accessing if it already exists) the required managed folder."
       ]
     },
     {
